Break out calibration into a separate example.

--- a/examples/calibration/platformio.ini
+++ b/examples/calibration/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 default_envs = nodemcuv2
-workspace_dir = C:\temp\AHRS\.pio
+workspace_dir = C:\temp\calibration\.pio
 
 [env]
 framework = arduino
